--- a/CarFactoryProject/CarFactoryProject.csproj
+++ b/CarFactoryProject/CarFactoryProject.csproj
@@ -41,11 +41,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AudioSystem.cs" />
+    <Compile Include="BodyFactory.cs" />
+    <Compile Include="BodyWithAudioSystem.cs" />
+    <Compile Include="BodyWithSpoiler.cs" />
+    <Compile Include="BodyWithSpoilerAndAudioSystem.cs" />
+    <Compile Include="Car.cs" />
+    <Compile Include="EngineFactory.cs" />
+    <Compile Include="EngineWithTurbo.cs" />
+    <Compile Include="IAssembly.cs" />
+    <Compile Include="IPrice.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleBody.cs" />
+    <Compile Include="SimpleEngine.cs" />
+    <Compile Include="SimpleWheel.cs" />
+    <Compile Include="Spoiler.cs" />
+    <Compile Include="Tuning.cs" />
+    <Compile Include="Turbo.cs" />
+    <Compile Include="WheelFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
